--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
 Gallery section - fetch data directly from facebook (req. fb app, do it later)
 
 Form submission - rate limiting
+
+Services & About Us pages
+
+Optimize
