--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,32 @@
 Gallery section - fetch data directly from facebook (req. fb app, do it later)
 
 Form submission - rate limiting
+
+Dynamic page for each service
+- unique title, meta description, headings
+- descriptions, benefits, FAQs
+
+Blog section
+
+optimise seo, local seo, keyword optimization
+
+detailed service page:
+- title(h1), icon, short description in italic or other format;
+- long description, around 300-500 words, keyword optimized
+- benefits section with bullet points/ infographic;
+* introductory sentence to lead into the benefits (Here are the key benefits of micro
+needling); list items as numbered or bullet points; keep the list to around 5-8 items
+each bullet point 1-2 lines longs, use popular keywords, lists or tables
+- faq section
+* for featured snippet: wrap each question in h2/h3 tags, and answers in a p tag or 
+short bullet list if needed. search for answer the public questions. direct answers,
+roughly 40-50 words; faqpage schema for ensuring increased chances: type FAQPage
+- unique fact for each
+- breadcrumbs Acasa > Servici > Dermapen
+
+main services page:
+list each item, with clicking to detailed page.
+
+about us page seo optimization
+
+home page optimize each section for improved seo.
