--- a/todo.txt
+++ b/todo.txt
@@ -6,26 +6,10 @@ Dynamic page for each service
 - unique title, meta description, headings
 - descriptions, benefits, FAQs
 
-Blog section
-
 optimise seo, local seo, keyword optimization
-
-detailed service page:
-- title(h1), icon, short description in italic or other format;
-- long description, around 300-500 words, keyword optimized
-- do not make any guarantees for getting slim !!
-- benefits section with bullet points/ infographic;
-* introductory sentence to lead into the benefits (Here are the key benefits of micro
-needling); list items as numbered or bullet points; keep the list to around 5-8 items
-each bullet point 1-2 lines longs, use popular keywords, lists or tables
-- faq section
-* for featured snippet: wrap each question in h2/h3 tags, and answers in a p tag or 
-short bullet list if needed. search for answer the public questions. direct answers,
-roughly 40-50 words; faqpage schema for ensuring increased chances: type FAQPage
-- unique fact for each
-- breadcrumbs Acasa > Servici > Dermapen
-
 
 -reorder correctly each service item, make a special file for each and import them into services array.
 
 about us page seo optimization
+
+update sitemap
