--- a/todo.txt
+++ b/todo.txt
@@ -2,4 +2,8 @@ Gallery section - fetch data directly from facebook (req. fb app, do it later)
 
 Form submission - rate limiting
 
+Booking System
+
+Change hero image and remove unsplash from next config
+
 update sitemap
