--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,13 @@
-Gallery section - fetch data directly from facebook (req. fb app, do it later)
+refine all data for updated req
 
 Form submission - rate limiting
 
 Booking System
 
 Change hero image and remove unsplash from next config
+
+meta pixel
+
+start ads - Ramadan edition xD
 
 update sitemap
