start cleaning the project

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 refine all data for updated req
 
-Form submission - rate limiting
+Form submission - rate limiting and correct sendgtm event
 
 Booking System
 
