--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,3 @@
-update sitemap
-
 make all seo optimizations
 
 update sitemap generation and ensure redirects from old url schema to new
@@ -17,3 +15,5 @@ check performance - optimize components
 refactor timezone by modularizing with functions
 
 for ads, make reservation action send gtm event for marking conversions
+
+sitemap include media?
