--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,8 @@ make all seo optimizations
 
 contact form
 
+refactor timezone by modularizing with functions
+
 add envs to vercel & DEPLOY
 
 submit sitemap
@@ -10,7 +12,7 @@ meta pixel - start ads
 
 check performance - optimize components
 
-refactor timezone by modularizing with functions
+hero2 - a/b testing
 
 for ads, make reservation action send gtm event for marking conversions
 
