--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
+optimize homepage (google maps third party)
+
+sns footer optimize
+
 contact form
 
 refactor timezone by modularizing with functions. as much as possible server side
